--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "uvicorn>=0.30.1",
     "pandas>=2.2.2",
     "pydantic>=2.7.4",
+    "openpyxl>=3.1.4",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
